--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,6 @@ h1{
     color:blue;
 }
 
-textarea{
-    font-size: 2em;
-    width: 70%;
-    height: 50px;
-    text-align: center;
-    margin-bottom: 20px;
-}
 
 .button{
     margin: 1.7%;
@@ -35,4 +28,11 @@ textarea{
 }
 
 
+#display{
+    font-size: 2em;
+    width: 70%;
+    height: 50px;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
